5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4414/executions/1590_2049.log
== TEST (2019-03-31 09:57:28) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=int(input("dividendo"))
y=int(input("divisor"))

print(x)
print(y)
print(x//y)
print(x%y)

-- OUTPUT:
8
5
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 09:57:41) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=int(input("dividendo:"))
y=int(input("divisor:"))

print(x)
print(y)
print(x//y)
print(x%y)

-- OUTPUT:
8
5
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 09:57:54) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=int(input("dividendo:"))
y=int(input("divisor:"))

print(x)
print(y)
print(x//y)
print(x%y)

-- EXECUTION TIME:
0.141009
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8
5
1
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14
2
7
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347
2
173
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 10:06:43) 
-- CODE:
x=int(input("dividendo:"))
y=int(input("divisor:"))

print(x)
print(Y)

print(x//y)
print(x%y)
-- EXECUTION TIME:
0.183499
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2049/main.py", line 5, in <module>
    print(Y)
NameError: name 'Y' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 10:06:47) 
-- CODE:
x=int(input("dividendo:"))
y=int(input("divisor:"))

print(x)
print(Y)

print(x//y)
print(x%y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Y)
NameError: name 'Y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 10:06:52) 
-- CODE:
x=int(input("dividendo:"))
y=int(input("divisor:"))

print(x)
print(Y)

print(x//y)
print(x%y)
-- EXECUTION TIME:
0.198012
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2049/main.py", line 5, in <module>
    print(Y)
NameError: name 'Y' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 10:07:00) 
-- CODE:
x=int(input("dividendo:"))
y=int(input("divisor:"))

print(x)
print(Y)

print(x//y)
print(x%y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Y)
NameError: name 'Y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 10:07:33) 
-- CODE:
x=int(input("dividendo:"))
y=int(input("divisor:"))

print(x)
print(y)

print(x//y)
print(x%y)
-- EXECUTION TIME:
0.115342
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8
5
1
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14
2
7
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347
2
173
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 17:41:31) 
-- CODE:
x=int(input("dividendo:"))
y=int(input("divisor"))

print(x//y)
print(x%y)
-- OUTPUT:
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 17:41:45) 
-- CODE:
x=int(input("dividendo:"))
y=int(input("divisor"))

print(x//y)
print(x%y)
-- EXECUTION TIME:
0.184056
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
1
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
7
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
173
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 17:42:17) 
-- CODE:
x=int(input("dividendo:"))
y=int(input("divisor"))

print(x)
print(y)
print(x//y)
print(x%y)
-- EXECUTION TIME:
0.196649
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8
5
1
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14
2
7
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347
2
173
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 17:42:33) 
-- CODE:
x=int(input("dividendo:"))
y=int(input("divisor"))

print(x)
print(y)
print(x//y)
print(x%y)
-- OUTPUT:
8
5
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
